<resources>
    <string name="app_name">7 Minutes Workout</string>
    <string name="image">image</string>
    <string name="str_start">START</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_kg">WEIGHT (in Kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_lbs">WEIGHT (in lbs)</string>
    <string name="feet">FEET</string>
    <string name="inch">INCH</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="_24_16">24.16</string>
    <string name="normal">Normal</string>
    <string name="congratulations_you_are_a_good_shaper">Congratulations! You are a good shaper!</string>
    <string name="calculate">CALCULATE</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_10">10</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE :</string>
    <string name="planks">planks</string>
    <string name="first_exercise">FIRST EXERCISE</string>
    <string name="_30">30</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_finished_the_workout">You have finished the workout!</string>
    <string name="finish">FINISH</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="history">History</string>
    <string name="are_you_sure">ARE YOU SURE?</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout.You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>