<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BMIActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorWhite"/>

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_bmi_activity"
        android:layout_margin="10dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:checked="true"
            android:text="@string/metric_units"
            android:gravity="center"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:button="@null"
            />

        <RadioButton
            android:id="@+id/rbUSUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:checked="false"
            android:text="@string/us_units"
            android:gravity="center"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:button="@null"
            />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/llUnitsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rgUnits"
        android:orientation="vertical"
        android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilMetricUnitWeight">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:textSize="16sp"
            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilMetricUnitHeight"
        android:layout_marginTop="10dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:textSize="16sp"
            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilUSUnitWeight"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_lbs"
            android:textSize="16sp"
            android:inputType="numberDecimal"
            />

        </com.google.android.material.textfield.TextInputLayout>

     <LinearLayout
         android:id="@+id/llUSUnitsHeight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:baselineAligned="false"
         android:orientation="horizontal"
         android:visibility="gone">

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:id="@+id/tilUSUnitHeightFeet"
             android:layout_weight="1">

             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/etHeightFeet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/feet"
                 android:textSize="16sp"
                 android:inputType="number"
                 />

         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:id="@+id/tilUSUnitHeightInch"
             android:layout_weight="1"
             android:layout_marginStart="5dp">

             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/etHeightInch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/inch"
                 android:textSize="16sp"
                 android:inputType="number"
                 />

         </com.google.android.material.textfield.TextInputLayout>

     </LinearLayout>


    <LinearLayout
        android:id="@+id/llDisplayBMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="invisible">

    <TextView
        android:id="@+id/tvYourBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_bmi"
        android:gravity="center"
        android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="#808080"
            android:text="@string/_24_16"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@string/normal"
            />

        <TextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/congratulations_you_are_a_good_shaper"
            android:textSize="20sp"
            />
    </LinearLayout>

        <Button
            android:id="@+id/btnCalculateUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent"
            android:text="@string/calculate"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>

</RelativeLayout>