<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textSize="18sp"
        android:textColor="#212121"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit"
        android:textColor="#212121"
        android:textSize="16sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/tvYes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textSize="18sp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="10dp"
            android:padding="8dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/tvNo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="18sp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>